--- a/abcTuner.vcxproj.filters
+++ b/abcTuner.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="src\atu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\CSerialPort.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\imgui\imstb_rectpack.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\atu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CSerialPort.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
